--- a/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/pervasiveweb.scss
+++ b/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/pervasiveweb.scss
@@ -3513,5 +3513,21 @@ letter-spacing: 0.0em;
   -webkit-animation-delay: 0.25s;
   animation-delay: 0.25s;
 }
+.delay15 {
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 1.5s;
+}
+.delay20 {
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 2s;
+}
+.delay25 {
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 2.5s;
+}
+.delay30 {
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 3s;
+}
   
 }
