Completed methods for getting almost all infos about the selected classroom, initiated development of methods to plot the graph for the noise levels of the classroom

--- a/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/pervasiveweb.scss
+++ b/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/pervasiveweb.scss
@@ -3543,4 +3543,10 @@ letter-spacing: 0.0em;
   .centeredText{
   	text-align: center;
   }
+  .clockcomponent .clockValo{
+  font-weight: inherit;
+  font-size: inherit;
+  background-color: white;
+  color: black;
+  }
 }
