--- a/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/styles.css
+++ b/PervasiveWeb/WebContent/VAADIN/themes/pervasiveweb/styles.css
@@ -15579,3 +15579,10 @@ div.v-layout.v-horizontal.v-widget {
 .pervasiveweb .centeredText {
 	text-align: center;
 }
+
+.pervasiveweb .clockcomponent .clockValo {
+	font-weight: inherit;
+	font-size: inherit;
+	background-color: white;
+	color: black;
+}
